fix: add `letter-spacing` for buttons

--- a/assets/ui-kit/ui-kit.css
+++ b/assets/ui-kit/ui-kit.css
@@ -25,6 +25,7 @@
   font-weight: 400;
   font-size: 17px;
   color: var(--text-color);
+  letter-spacing: 0.06em;
   text-decoration: none;
 }
 
@@ -45,6 +46,7 @@
   font-weight: 400;
   font-size: 17px;
   color: var(--text-color);
+  letter-spacing: 0.06em;
 }
 
 .shelter-button--secondary:hover {
@@ -114,6 +116,7 @@
   line-height: 115%;
   letter-spacing: 0.06em;
   color: var(--text-color);
+  letter-spacing: 0.06em;
 }
 
 .shelter-button--paginator:hover {
