--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -143,7 +143,8 @@
 }
 
 .pets__button-card {
-  margin: 0 41.5px 30px 41.5px;
+  display: block;
+  margin: 0 auto 30px;
 }
 
 .pets__animal-card:hover .pets__button-card {
@@ -152,7 +153,7 @@
 }
 
 .pets__button-primary {
-  margin: 0 469px 0 470px;
+  margin: auto;
 }
 
 .help__section {
